--- a/styles.css
+++ b/styles.css
@@ -486,7 +486,7 @@ nav {
       color: white;
     }
 
-    .step-count {
+    .client-count {
       color: white;
       font-size: 16px;
       font-weight: bold;
